task5/tests/hw5-tests/output/t1.out
lli: <stdin>:51:7: error: use of undefined value '%-22008'
br i1 %-22008, label %label_4, label %label_6
      ^

